# npiet

./: ChangeLog  Makefile  Makefile.in  README.npiet  config.h.in  configure  configure.in  npiet-foogol.1  npiet-foogol.c  npiet-foogol.y  npiet.1  npiet.c  npietedit  npietedit.1
examples/: Makefile  README  hi.ppm  loop.ppm  nfib.ppm  nprime.ppm  runtest.sh
foo/: 1.foo  2.foo  3.foo  4.foo  5.foo  5.out  7.foo  7.out  99-bottles.foo  99-bottles.out  README  expr-0.foo  expr-0.out  expr-1.foo  expr-1.out  expr-2.foo  expr-2.out  foogol-example.foo  foogol-example.out  hello-world.foo  if-1.foo  runtest.sh  while-if-1.foo  while.foo  while.out
